In expand mode, For “Data” text is coming out of the box issue fixed

--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -11912,6 +11912,9 @@ height: 16px;
 .searchAssist-kore-chat-window .panel .tile-description {
 height: inherit;
 }
+.searchAssist-kore-chat-window .panel .desc-text-img, .searchAssist-kore-chat-window .panel .desc-text{
+word-break: break-word;
+}
 .searchAssist-kore-chat-window .panel .desc-text-img img, .searchAssist-kore-chat-window .panel .desc-text img{
     width: 90%;
     display: block;
